artifacts/k8s-example-yaml/httpbin/httpbin.filter.yaml
apiVersion: enroute.saaras.io/v1beta1
kind: IngressRoute
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: enroute-gw-k8s
spec:
  virtualhost:
    fqdn: httpbin.local
    tls:
      secretName: tls-secret-v0.3.0-httpbin-local
    filters:
      - name: luatestfilter
        type: http_filter_lua
  routes:
    - match: /
      services:
        - name: httpbin
          port: 80
      filters:
        - name: rl2
          type: route_filter_ratelimit
---
